(executable
 (name cohttp_server)
 (public_name cohttp-server)
 (modules cohttp_server)
 (libraries cohttp-eio eio_main))

(executable
 (name httpaf_server)
 (public_name httpaf-server)
 (modules httpaf_server)
 (libraries httpaf-eio eio_main))

(executable
 (name httpaf_tcpip_server)
 (public_name httpaf-tcpip-server)
 (modules httpaf_tcpip_server)
 (libraries
  httpaf-eio
  tcpip.stack-eio
  tcpip.ipv4
  tcpip.ipv6
  tcpip.stack-direct
  mirage-net-unix
  mirage-clock-unix
  mirage-random-test
  eio_main))
